Fri Jun  8 09:15:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/dcps_tests.lst:
        * tests/DCPS/TopicReuse/Messenger.idl:
        * tests/DCPS/TopicReuse/Messenger_export.h:
        * tests/DCPS/TopicReuse/TopicReuse.mpc:
        * tests/DCPS/TopicReuse/rtps_disc.ini:
        * tests/DCPS/TopicReuse/run_test.pl:
        * tests/DCPS/TopicReuse/tpreuse.cpp:
          New test that deletes the topic while still being used by the
          datawriter

        * tests/DCPS/DomainParticipantId/dp.cpp:
          Updated test to allow same handles for domain id's

        * tests/DCPS/BuiltInTopic/main.cpp:
        * tests/DCPS/FooTest5_0/main.cpp:
        * tests/DCPS/Messenger/Messenger.mpc:
          Layout changes

Thu Jun  7 19:21:57 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.h:
        * dds/DCPS/OfferedDeadlineWatchdog.cpp:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/PublisherImpl.h:
        * dds/DCPS/RequestedDeadlineWatchdog.cpp:
        * dds/DCPS/SubscriberImpl.cpp:
        * dds/DCPS/SubscriberImpl.h:
        * dds/idl/CPPTemplate.txt:
          Converted internal listener usage to use refernce counted var.

Thu Jun  7 06:57:37 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/dcps_tests.lst:
        * tests/DCPS/DomainParticipantId:
        * tests/DCPS/DomainParticipantId/DomainParticipantId.mpc:
        * tests/DCPS/DomainParticipantId/dp.cpp:
        * tests/DCPS/DomainParticipantId/rtps_disc.ini:
        * tests/DCPS/DomainParticipantId/run_test.pl:
          Added new test, domain participant id's should be unique to our
          idea

Wed Jun  6 19:23:47 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_opendds.mpb: